Modified the txt plugin to refuse to add new txt members from the webportal unless you specifically tell it to. This solves the following webportal texting issue:
Assuming the last person you texted was A:

1) Send a text in scene 1 (members: you, A) without specifying the recipient.
- Result: Your message is sent to A (the other participant in your scene).

2) Switch to scene 2 in the play menu (members: you, B) and send a text without specifying the recipient
- Result: Your message is sent to A (not a member of the scene) and A is added to the scene.

With this change, the second case will instead return an error message to the web portal and require that you explicitly add them to the scene with `name[ name...]=message`.

--- a/plugins/txt/plugin/locales/locale_en.yml
+++ b/plugins/txt/plugin/locales/locale_en.yml
@@ -33,3 +33,5 @@ en:
       incorrect_format: "That's not the correct format. Please use `name(s)=message`"
 
       txt_new_scene_target_missing: "Please specify a target and message. Ex: txt/newscene Name=Message"
+
+      character_not_already_part_of_scene: "At least one recipient isn't in this scene! Please use `name(s)=message` to add more people."
